deployment/nifi.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  labels:
    name: nifi
    app: nifi
  annotations:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/part-of: nifi
spec:
  revisionHistoryLimit: 1
  serviceName: nifi
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      restartPolicy: Always
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: nifi
        image: docker.io/apache/nifi:1.20.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 11443
          name: cluster
        - containerPort: 8443
          name: https
        - containerPort: 6342
          name: cluster-lb
        volumeMounts:
          - name: data
            mountPath: /opt/nifi/nifi-current/data
            subPath: data
            readOnly: false
          - name: data
            mountPath: /opt/nifi/nifi-current/keytool
            subPath: keytool
            readOnly: false
          - name: scripts
            mountPath: /scripts/security.sh
            subPath: security.sh
            readOnly: false
        lifecycle:
          postStart:
            exec:
              command:
                - /scripts/security.sh
        livenessProbe:
          exec:
            command:
              - pgrep
              - java
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          tcpSocket:
            port: cluster
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            cpu: 400m
            memory: 2Gi
          limits:
            cpu: 400m
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
              - ALL
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 3Gi
        - name: scripts
          configMap:
            name: nifi-ssl-cm
            optional: false
            defaultMode: 0755
