deployment/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  labels:
    name: zookeeper
    app: zookeeper
  annotations:
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/part-of: nifi
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - zookeeper
      restartPolicy: Always
      containers:
      - name: zookeeper
        image: docker.io/zookeeper:3.7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2181
          name: zk
        - containerPort: 8080
          name: web
        - containerPort: 5111
          name: cmd
        livenessProbe:
          exec:
            command:
              - which
              - java
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          tcpSocket:
              port: 2181
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            cpu: 300m
            memory: 1Gi
          limits:
            cpu: 400m
            memory: 2G
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          runAsGroup: 1000
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
              - SYS_TIME
