deployment/zookeeper.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  labels:
    name: zookeeper
    app: zookeeper
  annotations:
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/part-of: nifi
spec:
  revisionHistoryLimit: 1
  serviceName: zookeeper
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      restartPolicy: Always
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: zookeeper
        image: docker.io/zookeeper:3.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2181
          name: zk
        - containerPort: 2182
          name: zc
        - containerPort: 8080
          name: web
        - containerPort: 5111
          name: cmd
        livenessProbe:
          exec:
            command:
              - which
              - java
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          tcpSocket:
              port: 2181
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            cpu: 200m
            memory: 1Gi
          limits:
            cpu: 300m
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
