deployment/zookeeper-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeeper
  annotations:
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/part-of: nifi
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
  - protocol: TCP
    port: 2181
    targetPort: 2181
    name: zk
  - protocol: TCP
    port: 2182
    targetPort: 2182
    name: zc
  - protocol: TCP
    port: 5111
    targetPort: 5111
    name: cmd
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: web
